<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>IdealGraphVisualizer-parent</name>
    <groupId>org.graalvm.visualizer</groupId>
    <artifactId>IdealGraphVisualizer-parent</artifactId>
    <version>1.23-SNAPSHOT</version>
    <packaging>pom</packaging>
    <scm>
        <developerConnection>
            scm:git:git@github.com:oracle/graal.git
        </developerConnection>
      <tag>HEAD</tag>
  </scm>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.openrewrite.maven</groupId>
                    <artifactId>rewrite-maven-plugin</artifactId>
                    <version>6.15.0</version>
                    <configuration>
                        <activeRecipes>
                            <recipe>org.openrewrite.staticanalysis.UnnecessaryParentheses</recipe>
                            <recipe>org.openrewrite.staticanalysis.UnnecessaryReturnAsLastStatement</recipe>
                            <recipe>org.openrewrite.staticanalysis.UnnecessaryExplicitTypeArguments</recipe>
                            <recipe>org.openrewrite.staticanalysis.UnnecessaryCloseInTryWithResources</recipe>
                            <recipe>org.openrewrite.staticanalysis.NoValueOfOnStringType</recipe>
                            <recipe>org.openrewrite.staticanalysis.NoToStringOnStringType</recipe>
                            <recipe>org.openrewrite.maven.BestPractices</recipe>
                            <recipe>org.openrewrite.maven.cleanup.PrefixlessExpressions</recipe>
                        </activeRecipes>
                        <exclusions>
                            <exclusion>**.groovy</exclusion>
                            <exclusion>**AbstractItModuleTestSupport.java</exclusion>
                            <exclusion>**AbstractRootNode.java</exclusion>
                            <exclusion>**BaseCellEditor.java</exclusion>
                            <exclusion>**BeforeExecutionExclusionFileFilterExamplesTest.java</exclusion>
                            <exclusion>**CheckstyleAntTask.java</exclusion>
                            <exclusion>**CsvFilterElement.java</exclusion>
                            <exclusion>**DefaultConfiguration.java</exclusion>
                            <exclusion>**DefaultContext.java</exclusion>
                            <exclusion>**DetailAstSet.java</exclusion>
                            <exclusion>**EqualsAvoidNullCheck.java</exclusion>
                            <exclusion>**FileContents.java</exclusion>
                            <exclusion>**FileNameTest.java</exclusion>
                            <exclusion>**FinalClassCheck.java</exclusion>
                            <exclusion>**GeneratedJavaTokenTypesTest.java</exclusion>
                            <exclusion>**HeaderCheckTest.java</exclusion>
                            <exclusion>**JavaAstVisitor.java</exclusion>
                            <exclusion>**Main.java</exclusion>
                            <exclusion>**MainTest.java</exclusion>
                            <exclusion>**ModuleInputConfiguration.java</exclusion>
                            <exclusion>**MultilineDetector.java</exclusion>
                            <exclusion>**NonAsciiCharactersTest.java</exclusion>
                            <exclusion>**OrderedPropertiesCheck.java</exclusion>
                            <exclusion>**PackageStatementTest.java</exclusion>
                            <exclusion>**PatternVariableAssignmentCheck.java</exclusion>
                            <exclusion>**PropertiesExpander.java</exclusion>
                            <exclusion>**PropertiesMacro.java.java</exclusion>
                            <exclusion>**RegexpCheck.java</exclusion>
                            <exclusion>**RegexpOnFilenameCheckExamplesTest.java</exclusion>
                            <exclusion>**RegexpSinglelineJavaCheck.java</exclusion>
                            <exclusion>**ReverseListIteratorTest.java</exclusion>
                            <exclusion>**ScopeUtil.java</exclusion>
                            <exclusion>**SiteUtil.java</exclusion>
                            <exclusion>**SpecialEscapeSequencesTest.java</exclusion>
                            <exclusion>**SuppressWithNearbyCommentFilterTest.java</exclusion>
                            <exclusion>**SuppressWithNearbyTextFilter.java</exclusion>
                            <exclusion>**SuppressWithPlainTextCommentFilter.java</exclusion>
                            <exclusion>**SuppressionXpathSingleFilterExamplesTest.java</exclusion>
                            <exclusion>**TreeWalkerTest.java</exclusion>
                            <exclusion>**WhitespaceCharactersTest.java</exclusion>
                            <exclusion>**XdocsTemplateParser.java</exclusion>
                            <exclusion>**XpathFileGeneratorAstFilter.java</exclusion>
                            <exclusion>**XpathIteratorUtil.java</exclusion>
                            <exclusion>**release.yml</exclusion>
                            <exclusion>**resources-noncompilable**</exclusion>
                            <exclusion>**src/it/resources**</exclusion>
                            <exclusion>**src/test/resources**</exclusion>
                            <exclusion>**src/xdocs-examples**</exclusion>
                        </exclusions>
                        <exportDatatables>true</exportDatatables>
                        <failOnDryRunResults>true</failOnDryRunResults>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.openrewrite.recipe</groupId>
                            <artifactId>rewrite-third-party</artifactId>
                            <version>0.24.3</version>
                        </dependency>
                        <dependency>
                            <groupId>org.openrewrite.recipe</groupId>
                            <artifactId>rewrite-static-analysis</artifactId>
                            <version>2.14.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.netbeans.utilities</groupId>
                    <artifactId>nbm-maven-plugin</artifactId>
                    <version>${nbmmvnplugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <brandingToken>${brandingToken}</brandingToken>
                        <cluster>${brandingToken}</cluster>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${mvncompilerplugin.version}</version>
                    <configuration>
                        <source>11</source>
                        <release>17</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${mvnjarplugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.12.2</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.awt.headless>true</java.awt.headless>
                        </systemPropertyVariables>
                        <argLine>
                            --add-opens=java.base/java.net=ALL-UNNAMED
                            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                            -Dpolyglot.engine.WarnInterpreterOnly=false
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.1.1</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <pushChanges>false</pushChanges>
                        <tagNameFormat>idealgraphvisualizer-@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${mvnenforcerplugin.version}</version>
                    <executions>
                        <execution>
                            <id>enforce-java</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>[17,24)</version>
                                        <message>The IGV Netbeans platform requires a JDK version between 17 and 24</message>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>branding</module>
        <module>application</module>
        <module>Settings</module>
        <module>Data</module>
        <module>VisualizerUI</module>
        <module>Difference</module>
        <module>PolyglotRunner</module>
        <module>SettingsUI</module>
        <module>Util</module>
        <module>HierarchicalLayout</module>
        <module>Layout</module>
        <module>Bytecodes</module>
        <module>ControlFlow</module>
        <module>Coordinator</module>
        <module>Filter</module>
        <module>FilterProfiles</module>
        <module>FilterWindow</module>
        <module>Graal</module>
        <module>Graph</module>
        <module>GraphSearch</module>
        <module>JSONExporter</module>
        <module>JavaSources</module>
        <module>NetworkConnection</module>
        <module>SelectionCoordinator</module>
        <module>Shell</module>
        <module>SourceRepository</module>
        <module>Upgrade</module>
        <module>View</module>
        <module>ViewerApi</module>
    </modules>
    <properties>
        <netbeans.version>RELEASE260</netbeans.version>
        <brandingToken>idealgraphvisualizer</brandingToken>
        <swinglayouts.version>1.0.2</swinglayouts.version>
        <nbmmvnplugin.version>4.8</nbmmvnplugin.version>
        <mvncompilerplugin.version>3.10.1</mvncompilerplugin.version>
        <mvnjarplugin.version>3.2.2</mvnjarplugin.version>
        <mvnenforcerplugin.version>3.1.0</mvnenforcerplugin.version>
        <junit.version>4.13.2</junit.version>
        <batik.version>1.14</batik.version>
        <openpdf.version>1.3.29</openpdf.version>
        <wala.version>1.5.8</wala.version>
    </properties>
    <profiles>
        <profile>
            <id>jdk-24-workarounds</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>${mvncompilerplugin.version}</version>
                            <configuration>
                                <!--JDK 24 requires explicitly enabled annotation processing but JDK 17 doesn't know the flag -->
                                <compilerArgs>
                                    <arg>-proc:full</arg>
                                </compilerArgs>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>2.12.2</version>
                            <configuration>
                                <!-- Avoid potential problems with jargraal and importing jdk.graal.compiler.graphio -->
                                <argLine>
                                    -XX:+UnlockExperimentalVMOptions
                                    -XX:-UseJVMCICompiler
                                    -XX:-EnableJVMCI
                                </argLine>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
            <activation>
                <jdk>[24,)</jdk>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
    </profiles>
</project>
